samples/_failures_safe/1761342573_17fecd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0432b780.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_0432b780.c:165:9: error: expected expression at end of input
  165 |         case TOKEN_OPERATOR: return
      |         ^~~~
./samples/SAFE/__tmp_0432b780.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0432b780.c:165:9: error: expected declaration or statement at end of input
